# NDKproject

./: README.md  app.sh  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ndkproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib - 副本.txt  native-lib.cpp
app/src/main/java/com/example/ndkproject/: FFmpegSurface.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ndkproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
